finished script, created highscore and html and script, updated css

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <div id="wrapper">
         <div id="time"></div>
-        <div id="questions">
+        <div id="questionsDiv">
             <h1>Quiz Challenge</h1>
             <p>
                 Answer the following coding questions in the time limit. Incorrect answers will penalize your time and your score by 8 seconds!
