--- a/highscores.html
+++ b/highscores.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="C:\Users\Redux\Documents\class-stuff\class-docs\module-4-challenge\assets\style.css" />
+    <link rel="stylesheet" type="text/css" href="/assets/style.css" />
     <title>Highscores</title>
 </head>
 <body>
@@ -17,6 +17,6 @@
             <button id="clear" value="rest">Clear highscore</button>
         </div>
     </div>
-    <script src="C:\Users\Redux\Documents\class-stuff\class-docs\module-4-challenge\assets\highscores.js"></script>
+    <script src="/assets/highscores.js"></script>
 </body>
 </html>
