--- a/assets/highscores.html
+++ b/assets/highscores.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/assets/style.css" />
-    <title>Highscores</title>
+    <link rel="stylesheet" type="text/css" href="/assets/css/style.css" />
+    <title>High scores</title>
 </head>
 <body>
     <div id="wrapper">
@@ -17,6 +17,6 @@
             <button id="clear" value="rest">Clear highscore</button>
         </div>
     </div>
-    <script src="/assets/highscores.js"></script>
+    <script src="/assets/scripts/highscores.js"></script>
 </body>
 </html>
