--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/assets/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
     <title>Quiz</title>
 </head>
 <body>
@@ -22,6 +22,6 @@
         </div>
     </div>
     
-    <script src="/assets/scripts/script.js"></script>
+    <script src="./assets/scripts/script.js"></script>
 </body>
 </html>
